# optiora

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_COMPLETE.md  CLEANUP_SUMMARY.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_IMPLEMENTATION_PLAN.md  COMPETITIVE_INTEGRATIONS.md  CONTRIBUTING.md  COST_ESTIMATE.md  CREDENTIAL_MANAGEMENT.md  DASHBOARD.md  DASHBOARD_PREVIEW.md  DATA_POLICY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  Dockerfile  E2E_WALKTHROUGH_NOTES.md  GTM_STRATEGY.md  MONETIZATION.md  NEXT_PHASE.md  OCI_DEPLOYMENT.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  RELEASE_1_0_BACKLOG.md  RELEASE_NOTES.md  REPO_REVIEW.md  ROADMAP.md  SETUP.md  TESTING.md  UIX_REVIEW.md  alembic.ini  ansible.cfg  dashboard-mockup.html  demo.sh  docker-compose.yml  pyproject.toml  setup.sh  (+1 more)
alembic/: env.py
ansible/: README.md  ansible.cfg  inventory.example.yml
dashboard/: .env.local.example  .eslintrc.json  .gitignore  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  playwright.config.ts  playwright.live.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
deploy/: deploy-oci.sh
finops_mcp/: __init__.py  access_control.py  api.py  app.py  audit.py  auth_routes.py  auth_utils.py  config.py  connectors.py  cost_context.py  credentials.py  database.py  genai_scope.py  imported_cost_csv.py  kubernetes_catalog.py  models.py  notifications.py  orm_models.py  provider_support.py  response_cache.py  retention.py  scanning.py  server.py
optiora_backend/: __init__.py  api.py  app.py  config.py  cost_context.py  credentials.py  external_anomalies.py  imported_costs.py  kubernetes_catalog.py  notifications.py  oci_cost_reports.py  orm_models.py  provider_support.py  scanning.py  scheduler_status.py
scripts/: bootstrap-local.sh  check-animated-svg-routes.sh  check_cloud_connectivity.py  cleanup-workspace.sh  generate_evidence_pack.sh  generate_openapi_client.py
terraform/: README.md  compute.tf  main.tf  outputs.tf  providers.tf  resource_scheduler.tf  terraform.tfvars.example  tfplan  variables.tf
tests/: __init__.py  conftest.py  live_data_gate.sh  smoke_test_0_9.sh  test_advanced_finops_features.py  test_anomaly_recommendations.py  test_auth_flow.py  test_aws_integration.py  test_azure_gcp.py  test_competitive_ops.py  test_config.py  test_connector_framework.py  test_cost_context.py  test_deep_finops_analytics.py  test_epic2_multi_account.py  test_epic3_business_mapping.py  test_epic4_reporting.py  test_external_anomalies.py  test_forecast_stress_and_portfolio.py  test_genai_rag_wiring.py  test_genai_scope.py  test_imported_cost_csv.py  test_imported_costs.py  test_inventory.py  test_kubernetes.py  test_notifications.py  test_oci_credential_input.py  test_oci_database.py  test_oci_upload_api.py  test_partner_portfolio.py  test_platform_hardening.py  test_provider_capabilities.py  test_recommendations_snapshot_fallback.py  test_resource_intelligence.py  test_response_cache.py  test_rightsizing.py  test_rightsizing_oci_storage.py  test_runtime_hardening.py  (+6 more)
(+116 files in other folders)
