[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "optiora"
version = "0.9.2"
description = "OptiOra - Multi-Cloud Cost Optimization platform deployed on OCI. Optimize costs across AWS, Azure, GCP, and OCI."
authors = [{name = "Leandro Michelino - ACE", email = "leandro.michelino@oracle.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.14"

[tool.poetry]
name = "optiora"
version = "0.9.2"
description = "OptiOra - Multi-Cloud Cost Optimization platform on OCI"
authors = ["Leandro Michelino - ACE <leandro.michelino@oracle.com>"]
packages = [{ include = "optiora_backend" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
boto3 = "^1.34.0"
azure-identity = "^1.15.0"
azure-mgmt-advisor = "^9.0.0"
azure-mgmt-costmanagement = "^4.0.0"
google-cloud-billing = "^1.13.0"
google-cloud-bigquery = "^3.25.0"
oci = "^2.120.0"
bcrypt = ">=3.2.0,<4.0.0"
openpyxl = "^3.1.0"
pydantic = "^2.0.0"
email-validator = "^2.2.0"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
fastapi = "^0.115.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.5.0"
pytest = "^9.0.0"

[tool.poetry.scripts]
optiora = "optiora_backend.app:main"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length handled by black

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--ignore-glob='* (1).py'"
